[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "threat-detection-agent"
version = "1.0.0"
description = "AI-powered Threat Detection Agent (SRS-01) using LangGraph"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.5",
    "uvicorn>=0.27",
    "fastapi>=0.109",
    "confluent-kafka>=2.3",
    "httpx>=0.27",
    "prometheus-client>=0.20",
    "structlog>=24.1",
    "redis>=5.0",
    "psycopg[binary]>=3.1",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
    "cryptography>=42.0",
"pydantic-settings>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-timeout>=2.2",
    "respx>=0.21",
    "faker>=22.0",
    "ruff>=0.2",
    "mypy>=1.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "detection: seeded attack scenario tests",
    "load: load/performance tests",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
